Fixed overlap on downloads page

--- a/public/scss/downloads.scss
+++ b/public/scss/downloads.scss
@@ -4,7 +4,6 @@
 .downloads-container {
     display: flex;
     flex: 1 0 auto;
-    flex-direction: column;
     justify-content: center;
     padding: 0 10%;
     background-color: #F9FAFB;
